# Robot_Planning_Project

./: .gitignore  README.md  a.sh
dubins_planner/: CMakeLists.txt
dubins_planner/data/: multipolygon_data.txt  polygon.txt  voronoi_edges.csv  voronoi_points.csv
dubins_planner/launch/: plan.launch.py
dubins_planner/scripts/: plot.py
dubins_planner/src/: path_planner.cpp  rec.cpp  voronoi_boost.cpp
get_positions/src/: get_positions.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dubins_planner/lib/dubins_planner/: dubins_planner
install/dubins_planner/share/dubins_planner/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dubins_planner/share/dubins_planner/cmake/: dubins_plannerConfig.cmake
install/dubins_planner/share/dubins_planner/launch/: dubins.launch.py
install/shelfino_description/share/ament_index/resource_index/package_run_dependencies/: shelfino_description
install/shelfino_description/share/shelfino_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/shelfino_gazebo/share/shelfino_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/shelfino_navigation/share/shelfino_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
map_pkg/config/: map_config.yaml
map_pkg/src/: send_gates.cpp  send_obstacles.cpp
planner/: CMakeLists.txt  ideas  package.xml  tmp
planner/data/: polygon.txt
planner/include/planner/: map_info.hpp  map_info_node.hpp  rrt.hpp  rrt_connect_plan.hpp  voronoi_boost.h
planner/include/planner/dubins/: dubins.h
planner/include/planner/rrt/: rrt_plan.hpp  rrt_star_dubins_plan.hpp  rrt_star_plan.hpp  threaded_planner.hpp
planner/include/planner/rrt/planners/: rrt_plan.hpp  rrt_star_dubins_plan.hpp  rrt_star_plan.hpp  threaded_planner.hpp
planner/include/planner/rrt/utils/: kdtree.hpp  map_info.hpp  motionplanning.hpp  rrt.hpp  rrt_dubins.hpp
planner/include/planner/rrt_star/: kdtree.hpp  map_info.hpp  motionplanning.hpp  rrt_plan.hpp  rrt_star_plan.hpp
planner/include/planner/voronoi/: voronoi_boost.h
planner/include/planner/voronoi/planners/: voronoi_plan.hpp
planner/include/planner/voronoi/utils/: combinations.h  dijkstra.h  permutations.h  random_combinations.h  voronoi_builder.h
planner/launch/: RRTSTAR.launch.py  multithread_planner.launch.py  rrt_star.launch.py  rrt_star_dubins.launch.py  voronoi_planner.launch.py
planner/rviz/: map.rviz
planner/scripts/: map_publisher.py  plot.py  visualise_dubins.py  visualise_voronoi.py
planner/src/: RRT_Dubins.cpp  kdtree.cpp  main.cpp  map_info.cpp  map_info2.cpp  map_info_node.cpp  nav2_client.cpp  path_planner.cpp  planner.cpp  rrt.cpp  rrt_plan.cpp  rrt_star_plan.cpp  threaded_planner.cpp  voronoi_boost.cpp
planner/src/dubins/: dubins.cpp
planner/src/rrt/: main.cpp  main_dubins.cpp  main_multithreaded.cpp  main_rrt_star.cpp  main_rrt_star_dubins.cpp  rrt_star_dubins_plan.cpp  rrt_star_plan.cpp  threaded_planner.cpp
planner/src/rrt/planners/: rrt_plan.cpp  rrt_star_dubins_plan.cpp  rrt_star_plan.cpp
planner/src/rrt/plans/: rrt_plan.cpp  rrt_star_dubins_plan.cpp  rrt_star_plan.cpp
planner/src/rrt/utils/: kdtree.cpp  map_info.cpp  rrt.cpp  rrt_dubins.cpp
planner/src/rrt_star/: kdtree.cpp  main.cpp  map_info.cpp  rrt.cpp  rrt_plan.cpp  rrt_star_plan.cpp
planner/src/voronoi/: main_voronoi.cpp  voronoi_boost.cpp  wkt_generator.cpp
planner/src/voronoi/planners/: voronoi_plan.cpp
planner/src/voronoi/utils/: combinations.cpp  dijkstra.cpp  random_combinations.cpp  voronoi_builder.cpp
shelfino_description/launch/: rviz.launch.py
shelfino_description/models/hexagon_world/: model.config  model.sdf
shelfino_description/rviz/: shelfino.rviz
shelfino_gazebo/launch/: multi_shelfino.launch.py  sapf.launch.py  shelfino.launch.py
shelfino_gazebo/rviz/: shelfino.rviz  shelfino2.rviz  shelfino3.rviz  shelfinoG.rviz
shelfino_gazebo/worlds/: hexagon.world  povo.world
shelfino_navigation/config/: shelfino.yaml
shelfino_navigation/launch/: multi_shelfino_nav.launch.py  shelfino_nav.launch.py
shelfino_navigation/rviz/: shelfino1_nav.rviz  shelfinoG_nav.rviz  shelfino_nav.rviz
shelfino_node/launch/: bringup.launch.py
shelfino_node/src/: hardwareglobalinterface.cpp  shelfino_hw_publisher.cpp
